[gd_scene load_steps=4 format=3 uid="uid://ca0xs5357oq1u"]

[ext_resource type="Script" uid="uid://d2sg73c4hstmj" path="res://instances/users/pnl_user_beans.gd" id="1_cflnw"]
[ext_resource type="Theme" uid="uid://d1rxorbgvgyer" path="res://ui/ridiculous_stream_main.theme" id="1_chwgi"]
[ext_resource type="PackedScene" uid="uid://dmi7ew3mtdkgd" path="res://instances/entries/entry_beans.tscn" id="3_chwgi"]

[node name="pnl_user_beans" type="PanelContainer"]
offset_right = 524.0
offset_bottom = 117.0
size_flags_horizontal = 3
theme = ExtResource("1_chwgi")
script = ExtResource("1_cflnw")

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="hb" type="HBoxContainer" parent="vb"]
layout_mode = 2
size_flags_vertical = 3

[node name="vb_tools" type="VBoxContainer" parent="vb/hb"]
layout_mode = 2

[node name="opt_available_beans" type="OptionButton" parent="vb/hb/vb_tools"]
unique_name_in_owner = true
layout_mode = 2

[node name="btn_add_beans" type="Button" parent="vb/hb/vb_tools"]
layout_mode = 2
size_flags_vertical = 3
text = "Add beans"

[node name="btn_open_bean_editor" type="Button" parent="vb/hb/vb_tools"]
layout_mode = 2
size_flags_vertical = 3
text = "Open beans editor"

[node name="scroll" type="ScrollContainer" parent="vb/hb"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="flow" type="HFlowContainer" parent="vb/hb/scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="entry_beans" parent="vb/hb/scroll/flow" instance=ExtResource("3_chwgi")]
layout_mode = 2

[connection signal="pressed" from="vb/hb/vb_tools/btn_add_beans" to="." method="_on_btn_add_beans_pressed"]
[connection signal="pressed" from="vb/hb/vb_tools/btn_open_bean_editor" to="." method="_on_btn_open_bean_editor_pressed"]
